test/classes/initializers/phase2/constArrayMod.good
constArrayMod.chpl:4: In initializer:
constArrayMod.chpl:9: error: cannot update a const field, "arr", in phase 2
